--- a/HerHair3.0/Base.lproj/Main.storyboard
+++ b/HerHair3.0/Base.lproj/Main.storyboard
@@ -197,6 +197,9 @@
                                     <color key="baseForegroundColor" systemColor="secondarySystemBackgroundColor"/>
                                     <color key="baseBackgroundColor" systemColor="systemPurpleColor"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="EnterButtonRecCurly:" destination="B2i-m2-B9b" eventType="touchUpInside" id="TMv-6D-Rbh"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="oCL-qA-ILr"/>
@@ -221,6 +224,42 @@
             </objects>
             <point key="canvasLocation" x="1721.3740458015266" y="3.5211267605633805"/>
         </scene>
+        <!--Rec Thick Curly View Controller-->
+        <scene sceneID="Gnp-74-cFm">
+            <objects>
+                <viewController storyboardIdentifier="RecThickCurlyViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="GI4-Eg-CRy" customClass="RecThickCurlyViewController" customModule="HerHair3_0" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="M2v-t7-UgJ">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RecThickCurly" translatesAutoresizingMaskIntoConstraints="NO" id="YEO-GN-APl">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dgs-ha-UZO" userLabel="Exit">
+                                <rect key="frame" x="170.66666666666666" y="767" width="52" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Exit">
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="baseBackgroundColor" systemColor="systemTealColor"/>
+                                </buttonConfiguration>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="S1g-m7-OrP"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="YEO-GN-APl" secondAttribute="trailing" id="CdM-1C-ayO"/>
+                            <constraint firstItem="YEO-GN-APl" firstAttribute="leading" secondItem="M2v-t7-UgJ" secondAttribute="leading" id="FP1-B3-Yug"/>
+                            <constraint firstAttribute="bottom" secondItem="dgs-ha-UZO" secondAttribute="bottom" constant="50" id="KTA-eN-gke"/>
+                            <constraint firstItem="YEO-GN-APl" firstAttribute="top" secondItem="M2v-t7-UgJ" secondAttribute="top" id="RDc-6M-R6F"/>
+                            <constraint firstItem="dgs-ha-UZO" firstAttribute="centerX" secondItem="M2v-t7-UgJ" secondAttribute="centerX" id="S1P-UZ-rt1"/>
+                            <constraint firstAttribute="bottom" secondItem="YEO-GN-APl" secondAttribute="bottom" id="zJw-HX-7Mr"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c29-6T-N0q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2486" y="4"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="tJd-hV-YrZ">
             <objects>
@@ -242,6 +281,7 @@
     </scenes>
     <resources>
         <image name="Background 1" width="504" height="864"/>
+        <image name="RecThickCurly" width="390" height="844"/>
         <image name="User Input" width="390" height="844"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
