placement of buttons on user interaction

--- a/HerHair3.0/Base.lproj/Main.storyboard
+++ b/HerHair3.0/Base.lproj/Main.storyboard
@@ -104,7 +104,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="TAC-tj-A7K" userLabel="Length">
-                                <rect key="frame" x="48" y="309" width="297" height="34.333333333333314"/>
+                                <rect key="frame" x="48" y="284" width="297" height="34.333333333333314"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1G7-Jz-FVY">
                                         <rect key="frame" x="0.0" y="0.0" width="85.666666666666671" height="34.333333333333336"/>
@@ -133,7 +133,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="JHO-ct-dFL" userLabel="Type">
-                                <rect key="frame" x="50" y="508.99999999999994" width="293" height="34.333333333333314"/>
+                                <rect key="frame" x="50" y="484" width="293" height="34.333333333333371"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M5r-r4-PxH">
                                         <rect key="frame" x="0.0" y="0.0" width="84.333333333333329" height="34.333333333333336"/>
@@ -205,18 +205,18 @@
                         <viewLayoutGuide key="safeArea" id="oCL-qA-ILr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="JHO-ct-dFL" firstAttribute="top" secondItem="us7-6p-4h4" secondAttribute="topMargin" constant="425" id="2Cq-6p-dAw"/>
                             <constraint firstAttribute="bottomMargin" secondItem="cqg-Km-yfI" secondAttribute="bottom" constant="75" id="3h2-EU-VhI"/>
                             <constraint firstItem="Goc-wl-RpC" firstAttribute="leading" secondItem="us7-6p-4h4" secondAttribute="leading" id="6E3-QH-pQn"/>
+                            <constraint firstItem="TAC-tj-A7K" firstAttribute="top" secondItem="us7-6p-4h4" secondAttribute="topMargin" constant="225" id="cTd-gx-qlx"/>
                             <constraint firstAttribute="trailing" secondItem="Goc-wl-RpC" secondAttribute="trailing" id="dm9-8z-6XP"/>
                             <constraint firstItem="oQc-Lb-jUU" firstAttribute="centerX" secondItem="us7-6p-4h4" secondAttribute="centerX" id="hci-Zk-UYj"/>
                             <constraint firstItem="Goc-wl-RpC" firstAttribute="top" secondItem="us7-6p-4h4" secondAttribute="top" id="mLJ-C1-sgv"/>
                             <constraint firstItem="cqg-Km-yfI" firstAttribute="centerX" secondItem="us7-6p-4h4" secondAttribute="centerX" id="qTx-VV-rYu"/>
                             <constraint firstAttribute="bottomMargin" secondItem="oQc-Lb-jUU" secondAttribute="bottom" constant="15" id="rNu-wF-K4U"/>
-                            <constraint firstItem="JHO-ct-dFL" firstAttribute="top" secondItem="us7-6p-4h4" secondAttribute="topMargin" constant="450" id="rha-Gj-Koj"/>
                             <constraint firstAttribute="bottom" secondItem="Goc-wl-RpC" secondAttribute="bottom" id="uJS-og-29K"/>
                             <constraint firstItem="JHO-ct-dFL" firstAttribute="centerX" secondItem="us7-6p-4h4" secondAttribute="centerX" id="v0M-Ab-bzk"/>
                             <constraint firstItem="TAC-tj-A7K" firstAttribute="centerX" secondItem="us7-6p-4h4" secondAttribute="centerX" id="xQc-dH-emz"/>
-                            <constraint firstItem="TAC-tj-A7K" firstAttribute="top" secondItem="us7-6p-4h4" secondAttribute="topMargin" constant="250" id="yXb-if-jiK"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -235,7 +235,7 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RecThickCurly" translatesAutoresizingMaskIntoConstraints="NO" id="YEO-GN-APl">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dgs-ha-UZO" userLabel="Exit">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dgs-ha-UZO">
                                 <rect key="frame" x="170.66666666666666" y="767" width="52" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Exit">
@@ -244,6 +244,8 @@
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="Exitbutton:" destination="GI4-Eg-CRy" eventType="touchUpInside" id="Qrc-Bu-3oe"/>
+                                    <action selector="FutureButton:" destination="GI4-Eg-CRy" eventType="touchUpInside" id="qCb-0Z-nQe"/>
+                                    <action selector="FutureNextBtn:" destination="GI4-Eg-CRy" eventType="touchUpInside" id="ivv-Rb-DjD"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ky8-ey-zLc" userLabel="LinkShea">
